[package]
name = "lovepack"
version = "0.2.1"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
clap = "2.32"
pretty_env_logger = "0.2"
log = "0.4"
failure = "0.1"

lpsettings = { version = "0.2", features = ["cli"] }
lprun = { version = "0.2", features = ["cli"] }
updater-lp = "0.3"

[patch.crates-io]
prettytable-rs = { git = "https://github.com/snsvrno/prettytable-rs", branch = "add_columns" }